# NeuroMarkets

./: .env.example  .gitignore  DataEth.py  EthConfig.py  EthOperator.py  EthSession.py  EthStrategy.py  LICENSE  NeoModel.pkl  README.md  SharkBoy.py  dashboard.html  dashboard_server.py  msm_model.pkl  position_tracker.json  pyproject.toml  requirements.txt
BullBoy/: DataEth.py  EthConfig.py  EthSession.py  EthStrategy.py  Interfaz.py  Ragnar.py  VisorTecnico.py
Demos/: .gitignore  BookOrder.py  Cambioporcentualdeprecio.py  CapitalPanel.py  DataEth.py  DataLoader.py  EthBoy.py  EthConfig.py  EthSession.py  EthStrategy.py  Evaluador.py  MomentumAnalyzer.py  MomentumHub.py  PositionValidator.py  Radar2.py  RichPrices.py  RichScanUI.py  TimingHelper.py  VisorTecnico.py  backtest_eth_final.py  compare_all_apis.py  debug_score.py  dedupe_and_replace_reports.py  demo_persistence.py  ejemplo_tracking_web.md  ethboy  evaluador  find_sl_range.py  inspect_mismatches.py  launch_capital_panel.py  lightstream_minimal.py  requirements.txt  run_dataeth.py  state.py  test_adx_filter.py  test_api_format2.py  test_api_format3.py  test_apis_eth.py  test_data_flow.py  test_evaluador_rule.py  (+6 more)
Deployments/: Cambioporcentualdeprecio.py  RichPrices.py
Evalueitor/: CapitalOperations.py  EthStrategy.py  Evalueitor.py  HIstoricalINdicators.py  MainOperator2.py  Strategy.py  repulser.py
GrupoBravo/: BookOrder.py  DataEth.py  EthConfig.py  EthSession.py  EthStrategy.py  Evaluador.py  Position.py  SharkBoy.py  VisorTecnico.py  position_tracker.json  profittracker.json
RatzoBot/: DataEth.py  (+7 more)
(+24 files in other folders)
